(lang dune 2.0)

(package
  (name tujkuko)
  (synopsis "A collection of recipes presented as an adventure game")
	(license AGPL-3.0-or-later)
	(maintainers "Martin Constantino–Bodin <martin.bodin@ens-lyon.org>")
	(source (github Mbodin/tujkuko))
	(homepage "https://mbodin.github.io/tujkuko/"))

(explicit_js_mode)

(using menhir 2.0)

